<resources>
    <string name="app_name">WayGo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name\t</string>
    <string name="signup">Daftar</string>
    <string name="login">login</string>
    <string name="check_account">Have account?</string>
    <string name="check_field">This field is required!</string>
    <string name="check_account_nothave">Don\'rt Have Account?</string>
    <string name="loading">Loading</string>
    <string name="title">Judul Notes\t</string>
    <string name="template">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque venenatis mauris ac molestie vestibulum. Sed eget magna et felis ultricies posuere. Maecenas vestibulum convallis rutrum. Nunc nulla felis, hendrerit quis consequat nec, tristique id lorem. Aliquam erat volutpat. Nam aliquet eleifend volutpat. Pellentesque sed fermentum ex. Vivamus varius, odio non.</string>
    <string name="image_desc">Image Captions</string>
    <string name="longitude">Longitude :</string>
    <string name="latitude">Latitude :</string>
    <string name="cat">Created At :</string>
    <string name="add_story">Add Story</string>
    <string name="add_title">Add Title</string>
    <string name="add_description">Add Caption</string>
    <string name="post">Posting</string>
    <string name="capture_your_photo">Capture your photo</string>
    <string name="switch_cam">Switch Camera</string>
    <string name="cancel">Cancel</string>
    <string name="add_from_camera">Add From Camera</string>
    <string name="add_from_gallery">Add From Gallery</string>
    <string name="logout">Logout</string>
    <string name="mincharacter">Minimum 8 character</string>
    <string name="maps">Maps</string>
    <string name="retry">Coba Lagi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="stories">Stories</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!--    <string name="menu_home">Home</string>-->
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->
    <!--    <string name="stories">Stories</string>-->
    <!--    <string name="title_activity_maps">MapsActivity</string>-->
    <string name="gambar_story">Gambar Story</string>
</resources>