<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivDetail"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/image_desc"
            android:scaleType="fitXY"
            android:transitionName="image"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="3dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:transitionName="title" />

        <TextView
            android:id="@+id/tvDeskripsi"
            style="@style/text_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/template"
            android:transitionName="description" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp">

            <TableRow>

                <TextView android:text="@string/longitude" />

                <TextView android:id="@+id/longDetailValue" />
            </TableRow>

            <View
                android:layout_height="1dp"
                android:background="@color/black" />

            <TableRow>

                <TextView android:text="@string/latitude" />

                <TextView android:id="@+id/latDetailValue" />
            </TableRow>

            <View
                android:layout_height="1dp"
                android:background="@color/black" />

            <TableRow>

                <TextView android:text="@string/cat" />

                <TextView android:id="@+id/createdAtDetailValue" />
            </TableRow>

            <View
                android:layout_height="1dp"
                android:background="@color/black" />

        </TableLayout>

    </LinearLayout>


</ScrollView>